# src/main/java/com/xeno/teensy/controller/CardController.java
@@ -35,4 +35,9 @@ public class CardController implements CardApi {
     public ResponseEntity<CardResponse> editCard(UpdateCardDto updateCardDto) {
         return null;
     }
+
+    @Override
+    public ResponseEntity<List<CardResponse>> getGroupCards(Integer groupId) {
+        return ResponseEntity.ok(cardService.getGroupCards(groupId));
+    }
 }
